[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.99999
height = 8.00003

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idle_down"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=53]
resource_name = "idle_downleft"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=43]
resource_name = "idle_downright"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=54]
resource_name = "idle_left"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=44]
resource_name = "idle_right"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=47]
resource_name = "idle_up"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=48]
resource_name = "idle_upleft"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=49]
resource_name = "idle_upright"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=79]
resource_name = "run_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=80]
resource_name = "run_downleft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=86]
resource_name = "run_downright"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=81]
resource_name = "run_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=85]
resource_name = "run_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=82]
resource_name = "run_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=83]
resource_name = "run_upleft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=84]
resource_name = "run_upright"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=87]
resource_name = "walk_down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=88]
resource_name = "walk_downleft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=94]
resource_name = "walk_downright"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79 ]
}

[sub_resource type="Animation" id=89]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=93]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75 ]
}

[sub_resource type="Animation" id=90]
resource_name = "walk_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67 ]
}

[sub_resource type="Animation" id=91]
resource_name = "walk_upleft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=92]
resource_name = "walk_upright"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71 ]
}

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "idle_downright"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "idle_downleft"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "idle_upleft"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "idle_upright"

[sub_resource type="AnimationNodeBlendSpace2D" id=38]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 34 )
blend_point_4/pos = Vector2( 0.5, 0.5 )
blend_point_5/node = SubResource( 35 )
blend_point_5/pos = Vector2( -0.5, 0.5 )
blend_point_6/node = SubResource( 36 )
blend_point_6/pos = Vector2( -0.5, -0.5 )
blend_point_7/node = SubResource( 37 )
blend_point_7/pos = Vector2( 0.5, -0.5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "run_up"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run_downright"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run_upright"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run_upleft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "run_downleft"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 15 )
blend_point_4/pos = Vector2( 0.5, 0.5 )
blend_point_5/node = SubResource( 16 )
blend_point_5/pos = Vector2( 0.5, -0.5 )
blend_point_6/node = SubResource( 17 )
blend_point_6/pos = Vector2( -0.5, -0.5 )
blend_point_7/node = SubResource( 18 )
blend_point_7/pos = Vector2( -0.5, 0.5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "walk_downleft"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "walk_downright"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "walk_upright"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "walk_upleft"

[sub_resource type="AnimationNodeBlendSpace2D" id=74]
blend_point_0/node = SubResource( 66 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 67 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 68 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 69 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 70 )
blend_point_4/pos = Vector2( -0.5, 0.5 )
blend_point_5/node = SubResource( 71 )
blend_point_5/pos = Vector2( 0.5, 0.5 )
blend_point_6/node = SubResource( 72 )
blend_point_6/pos = Vector2( 0.5, -0.5 )
blend_point_7/node = SubResource( 73 )
blend_point_7/pos = Vector2( -0.5, -0.5 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/idle/node = SubResource( 38 )
states/idle/position = Vector2( 228, 87 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 444, 87 )
states/walk/node = SubResource( 74 )
states/walk/position = Vector2( 333, 184 )
transitions = [ "idle", "run", SubResource( 39 ), "run", "idle", SubResource( 40 ), "idle", "walk", SubResource( 75 ), "walk", "idle", SubResource( 76 ), "walk", "run", SubResource( 77 ), "run", "walk", SubResource( 78 ) ]
start_node = "idle"
graph_offset = Vector2( -58, 48 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="CircleShape2D" id=95]
radius = 110.041

[sub_resource type="CapsuleShape2D" id=96]
height = 4.0

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 0, -11 )
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 80
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 41 )
anims/idle_down = SubResource( 42 )
anims/idle_downleft = SubResource( 53 )
anims/idle_downright = SubResource( 43 )
anims/idle_left = SubResource( 54 )
anims/idle_right = SubResource( 44 )
anims/idle_up = SubResource( 47 )
anims/idle_upleft = SubResource( 48 )
anims/idle_upright = SubResource( 49 )
anims/run_down = SubResource( 79 )
anims/run_downleft = SubResource( 80 )
anims/run_downright = SubResource( 86 )
anims/run_left = SubResource( 81 )
anims/run_right = SubResource( 85 )
anims/run_up = SubResource( 82 )
anims/run_upleft = SubResource( 83 )
anims/run_upright = SubResource( 84 )
anims/walk_down = SubResource( 87 )
anims/walk_downleft = SubResource( 88 )
anims/walk_downright = SubResource( 94 )
anims/walk_left = SubResource( 89 )
anims/walk_right = SubResource( 93 )
anims/walk_up = SubResource( 90 )
anims/walk_upleft = SubResource( 91 )
anims/walk_upright = SubResource( 92 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 21 )
parameters/idle/blend_position = Vector2( 0.656101, -0.686441 )
parameters/run/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0.00158477, 0.980198 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 95 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 1 )
shape = SubResource( 96 )

[node name="FoolinAroundTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="FoolinAroundTimer" to="." method="_on_FoolinAroundTimer_timeout"]
